# csetting

./: .gitignore  CMakeLists.txt  CNAME  LICENSE  README.md  build.sh  setting.c  setting.h  test.c  test.cc
.github/workflows/: cmake.yml
extra/: CMakeLists.txt  detectendianess.c
